Use Logentries LogSet data source
We'd like to be able to use Logentries LogSet data source to pass parent
LogSet ID where Logs will be created, instead of passing the ID into the
module.

This way we can remove an entry from platform-config making it less
complex and thinner.

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -8,7 +8,7 @@ ENV TERRAFORM_PROVIDER_FASTLY_VERSION=0.1.2_le-support
 ENV TERRAFORM_PROVIDER_NULL_VERSION=0.1.0
 ENV TERRAFORM_PROVIDER_TEMPLATE_VERSION=0.1.1
 ENV TERRAFORM_PROVIDER_ACME_VERSION=0.3.0
-ENV TERRAFORM_PROVIDER_LOGENTRIES_VERSION=0.1.0
+ENV TERRAFORM_PROVIDER_LOGENTRIES_VERSION=0.1.0_logset_datasource
 
 ENV PYTHONDONTWRITEBYTECODE donot
 
@@ -25,8 +25,8 @@ RUN apk update && apk add ca-certificates curl git openssl wget && \
         unzip terraform-provider-null_*_linux_amd64.zip -d /usr/bin && \
     wget -q https://releases.hashicorp.com/terraform-provider-template/${TERRAFORM_PROVIDER_TEMPLATE_VERSION}/terraform-provider-template_${TERRAFORM_PROVIDER_TEMPLATE_VERSION}_linux_amd64.zip && \
         unzip terraform-provider-template_*_linux_amd64.zip -d /usr/bin && \
-    wget -q https://releases.hashicorp.com/terraform-provider-logentries/${TERRAFORM_PROVIDER_LOGENTRIES_VERSION}/terraform-provider-logentries_${TERRAFORM_PROVIDER_LOGENTRIES_VERSION}_linux_amd64.zip && \
-            unzip terraform-provider-logentries_*_linux_amd64.zip -d /usr/bin && \
+    wget -q https://s3-eu-west-1.amazonaws.com/mmg-terraform-providers/terraform-provider-logentries_v${TERRAFORM_PROVIDER_LOGENTRIES_VERSION}_linux_amd64.zip && \
+        unzip terraform-provider-logentries_*_linux_amd64.zip -d /usr/bin && \
     wget -q https://github.com/paybyphone/terraform-provider-acme/releases/download/v${TERRAFORM_PROVIDER_ACME_VERSION}/terraform-provider-acme_v${TERRAFORM_PROVIDER_ACME_VERSION}_linux_amd64.zip && \
         unzip terraform-provider-acme_*_linux_amd64.zip -d /usr/bin && \
     rm -rf /tmp/* /var/cache/apk/* /var/tmp/*
